fixes background on mobile, adds icons

--- a/index.css
+++ b/index.css
@@ -1,12 +1,20 @@
 html {
   background-color: black;
-  background-image: url("background.jpg");
+  background-image: url("background-phone.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
 
   /* font-family: 'Montserrat', sans-serif; */
   font-family: 'Titillium Web', sans-serif;
 
+}
+
+@media screen and (min-width: 660px) {
+  html {
+    background-image: url("background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 
 body {
